--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,41 @@
 	<meta charset="UTF-8">
 	<title>Chat</title>
 	<link rel="stylesheet" type="text/css" href="./main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<h1>Chat de Charlie</h1>
 	<div id="content">
-		<div id="content-chat">
-			<div id="chat">
-			</div>
-			<div id="lobby">
-			</div>
+		<div id="user-register" class="display-flex">
+			<span id="register-span">Digite su nombre de usuario</span>
+			<form id="register-form">
+				<input type="text" id="register-username" autocomplete="off">
+				<button></button>
+			</form>
 		</div>
-		<form id="chat-form">
-			<span>Nombre: </span>
-			<input type="text" id="input-usuario" required>
-			<br/>
-			<span>Mensaje:</span>
-			<input type="text" id="input-mensaje" autocomplete="off" required>
-			<br/>
-			<button></button>
-		</form>
+		<div id="chat" class="display-none">
+			<div id="content-chat">
+				<div id="chat-messages">
+				</div>
+				<div id="connected-users">
+				</div>
+			</div>
+			<form id="chat-form">
+				<span>Nombre: </span>
+				<input type="text" id="input-usuario" disabled>
+				<br/>
+				<span>Mensaje:</span>
+				<input type="text" id="input-mensaje" autocomplete="off">
+				<br/>
+				<button></button>
+			</form>
+			<form title="añadir archivos">
+				<input type="file" id="img-upload" name="imagen" accept="*">
+				<i class="fa fa-file-image-o upload-image" aria-hidden="true"></i>
+
+			</form>
+			<div id="img"></div>
+		</div>
 	</div>
 	<script src="./socket.io/socket.io.js"></script>
 	<script src="./chat.js"></script>
