--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 				<br/>
 				<button></button>
 			</form>
-			<form title="añadir archivos">
+			<form id="img-form" title="añadir archivos">
 				<input type="file" id="img-upload" name="imagen" accept="*">
 				<i class="fa fa-file-image-o upload-image" aria-hidden="true"></i>
 
