--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <div id="body">
     <h1>Chat de Charlie</h1>
     <div id="content">
-      <div id="main">
+      <div id="main" class="display-flex">
         <h2>Salas disponibles</h2>
         <div class="rooms-main">
           <ul id="rooms-list">
@@ -45,9 +45,11 @@
         <form id="img-form" title="añadir archivos">
           <input type="file" id="img-upload" name="imagen" accept="*">
           <i class="fa fa-file-image-o upload-image" aria-hidden="true"></i>
-
         </form>
         <div id="img"></div>
+        <div id="menu-flotante">
+          <button class="boton-flotante" name="salir">SALIR</button>
+        </div>
       </div>
     </div>
   </div>
